infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clientes-mais
  labels:
    app.kubernetes.io/part-of: clientes-mais
